infra/k8s/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    service: api-gateway
  ports:
    - protocol: TCP
      port: 80 # The port other services/Ingress will use
      targetPort: 8080 # Matches the containerPort in the Deployment
---
