infra/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    service: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
